--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,26 +5,23 @@ en-US:
       url: /
     - title: "Posts"
       url: /posts/
-    # - title: "Sample Posts"
-    #   url: /year-archive/
-    # - title: "Sample Collections"
-    #   url: /collection-archive/
+  more:
+    - title: "About"
+      url: /about/
     - title: "Sitemap"
       url: /sitemap/
-    - title: "pl-PL"
-      url: /pl/
-
+    # - title: "pl-PL"
+    #   url: /pl/
 pl-PL:
   main:
     - title: "Strona główna"
       url: /pl/
     - title: "Posty"
       url: /pl/posts/
-    # - title: "Sample Posts"
-    #   url: /year-archive/
-    # - title: "Sample Collections"
-    #   url: /collection-archive/
+  more:
+    - title: "O mnie"
+      url: /pl/about/
     - title: "Sitemap"
       url: /sitemap/
-    - title: "en-US"
-      url: /
+    # - title: "en-US"
+    #   url: /
