poprawa wyglądu linków, dodanie godziny do postów

--- a/_config.yml
+++ b/_config.yml
@@ -108,14 +108,14 @@ analytics:
 # Site Author
 author:
   name             : "Nullmistrz"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  avatar           : "/assets/images/bio-photo.jpg"
+  bio              : "Pasjonat programowania, technologii i wszystkiego co związane z komputerami..."
   location         : "Warszawa, Poland"
-  email            :
+  email            : mtib2k@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+      # url: mailto:mtib2k@gmail.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
