--- a/_config.yml
+++ b/_config.yml
@@ -120,12 +120,12 @@ author:
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Serwis X"
-      icon: "/assets/icons/x.svg"
-      # icon: "fab fa-fw fa-x-svg"
+      # icon: "/assets/icons/x.svg"
+      icon: "fab fa-fw fa-twitter-square"
       url: "https://x.com/nullmistrz"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://x.com/nullmistrz"
+      # url: "https://x.com/nullmistrz"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
