--- a/_data/navigation-pl.yml
+++ b/_data/navigation-pl.yml
@@ -24,9 +24,13 @@ main:
 projekty-children:
   - title: "SQL"
     url: /pl/projects/sql/
+    icon: "fas fa-database"
   - title: "MikroTik"
     url: /pl/projects/mikrotik/
+    icon: "fas fa-network-wired"
   - title: "C#"
     url: /pl/projects/csharp/
+    icon: "fas fa-code"
   - title: "Esp32/arduino"
     url: /pl/projects/esp32-arduino/
+    icon: "fas fa-microchip"
