--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,12 +10,16 @@ en-US:
       children:
         - title: "SQL"
           url: /en/projects/sql/
+          icon: "fas fa-database"
         - title: "MikroTik"
           url: /en/projects/mikrotik/
+          icon: "fas fa-network-wired"
         - title: "C#"
           url: /en/projects/csharp/
+          icon: "fas fa-code"
         - title: "Esp32/arduino"
           url: /en/projects/esp32-arduino/
+          icon: "fas fa-microchip"
     - title: "Logs"
       url: /en/changelog_nm/
     #- title: "Style Demo"
@@ -40,12 +44,16 @@ pl-PL:
       children:
         - title: "SQL"
           url: /pl/projects/sql/
+          icon: "fas fa-database"
         - title: "MikroTik"
           url: /pl/projects/mikrotik/
+          icon: "fas fa-network-wired"
         - title: "C#"
           url: /pl/projects/csharp/
+          icon: "fas fa-code"
         - title: "Esp32/arduino"
           url: /pl/projects/esp32-arduino/
+          icon: "fas fa-microchip"
     #- title: "Style Demo"
     #  url: /style-demo/
   # more:
